apps/base/yana/service-content.yml
apiVersion: v1
kind: Service
metadata:
  name: yana-content
  namespace: yana
spec:
  selector:
    app: yana
  ports:
    - name: http
      port: 8081
      targetPort: 8081
