apps/base/yana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yana
  namespace: yana
spec:
  selector:
    app: yana
  ports:
    - name: http
      port: 8080
      targetPort: 8080
